--- a/css/style.css
+++ b/css/style.css
@@ -2845,6 +2845,7 @@ a.ui-button:active,
 }
 
 .card-service__row-title {
+  font-weight: 400;
   font-size: 30px;
   line-height: 36px;
 }
@@ -3003,6 +3004,10 @@ a.ui-button:active,
   border-bottom: 1px solid #E6E6E6;
 }
 
+.card-block__text {
+  color: #727272;
+}
+
 .work__section {
   background: #E5E5E5;
   padding: 250px 0;
@@ -3105,6 +3110,460 @@ a.ui-button:active,
 }
 
 /* -------------------adaptive-card-standart.html-------------------------------------- */
-@media (max-width:1200) {
+@media (max-width:1200px) {
+  .card__plus {
+    margin-right: 13px;
+    padding-right: 13px;
+  }
+
+  .card-option__item {
+    font-size: 11px;
+    line-height: 14px;
+    padding: 0 0 19px 0;
+  }
+
+  .add-options__card-img {
+    width: 150px;
+    height: 157px;
+  }
+
+  .add-options__col {
+    width: 440px;
+  }
+
+  .visualization__section {
+    padding: 117px 0;
+  }
+
+  .visualization-img {
+    width: 459px;
+    height: 366px;
+  }
+
+  .visualization__title {
+    margin-top: 53px;
+  }
+}
+
+@media (max-width:1024px) {
+  .header__nav {
+    margin-top: 70px;
+  }
+
+  .card-section__title {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+  }
+
+  .card__econom {
+    width: 193px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    padding: 8px 29px;
+  }
+
+  .card__order {
+    width: 130px;
+    height: 130px;
+    padding: 8px;
+  }
+
+  .card__order-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .card__order-text:after {
+    top: 28%;
+    width: 80px;
+  }
+
+  .card__consultation {
+    width: 140px;
+    margin-top: 23px;
+  }
+
+  .consultation__link_gray {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .card__img {
+    width: 224px;
+    height: 440px;
+    background-size: cover;
+  }
+
+  .card__col {
+    margin-right: 104px;
+  }
+
+  .card__img-preview {
+    width: 80px;
+    height: 80px;
+  }
+
+  .card__plus {
+    margin-top: 100px;
+  }
+
+  .card__plus-tatle {
+    width: 120px;
+    font-size: 11px;
+    line-height: 14px;
+  }
+
+  .card__plus {
+    margin-right: 33px;
+    padding-right: 33px;
+  }
+
+  .card__section {
+    padding: 40px 0 150px;
+  }
+
+  .options__item {
+    height: 40px;
+    font-size: 11px;
+    line-height: 14px;
+  }
+
+  .card-options__section {
+    padding: 200px 0 100px;
+  }
+
+  .card-option__item {
+    width: 100px;
+    white-space: normal;
+  }
+
+  .add-options__row {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .add-options__card {
+    margin-right: 30px;
+  }
+
+  .add-options__card-title {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    color: #222222;
+  }
+
+  .add-options__title {
+    margin-top: 100px;
+  }
+
+  .add-options__col {
+    width: 310px;
+  }
+
+  .add-options__link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .work__section {
+    padding: 150px 0;
+    font-size: 10px;
+    line-height: 13px;
+  }
+
+  .visualization__section {
+    padding: 79px 0;
+  }
+
+  .visualization-img {
+    width: 369px;
+    height: 294px;
+  }
+
+  .visualization__title {
+    width: 300px;
+    margin-top: 38px;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 26px;
+  }
+
+  .visualization__text {
+    width: 280px;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .newcomer-btn__arrow {
+    width: 242px;
+  }
+
+  .newcomer-btn__link {
+    font-size: 16px;
+    line-height: 21px;
+  }
+
+  .payment__section {
+    padding: 200px 0;
+    font-size: 10px;
+    line-height: 13px;
+    letter-spacing: 0.04em;
+  }
+
+  .sentence__conteiner {
+    margin-top: 150px;
+  }
+
+  .sentens__row .col-1:last-child {
+    display: none;
+  }
+
+  .sentens__nav {
+    margin-top: -150px;
+  }
+}
+
+@media (max-width: 700px) {
+  .nav__link {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .header__nav {
+    margin-top: 35px;
+  }
+
+  .section__row {
+    padding-bottom: 33px;
+  }
+
+  .card__row_line {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .card__section {
+    padding: 20px 0 150px;
+  }
+
+  .card__img {
+    width: 160px;
+    height: 314px;
+  }
+
+  .card__img-preview {
+    width: 55px;
+    height: 55px;
+    background-size: contain;
+  }
+
+  .card__col {
+    margin-right: 0;
+    margin-top: 30px;
+  }
+
+  .card-block__row {
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #E6E6E6;
+  }
+
+  .card__row_line {
+    border: none;
+  }
+
+  .card__col {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .card-price {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+  }
+
+  .card-price__old {
+    margin-top: 5px;
+    font-size: 12px;
+    line-height: 14px;
+    margin-right: 10px;
+  }
+
+  .card__price {
+    font-size: 18px;
+    line-height: 23px;
+  }
+
+  .card__row {
+    flex-wrap: wrap;
+  }
+
+  .card__plus {
+    width: 190px;
+    margin-right: 28px;
+    padding-right: 0;
+  }
+
+  .card__plus:nth-child(2n) {
+    border: none;
+  }
+
+  .card-service__section {
+    padding-top: 30px;
+  }
+
+  .card-service__title {
+    font-size: 14px;
+    line-height: 18px;
+    padding-bottom: 30px;
+  }
+
+  .card-service__row {
+    padding: 30px 0;
+    flex-direction: column;
+  }
+
+  .card-service__row {
+    border-top: 1px solid #C7C7C7;
+    border-bottom: none;
+  }
+
+  .card-service__row-title {
+    font-size: 18px;
+    line-height: 23px;
+  }
+
+  .card-service__row-text {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+
+  .card-service__img {
+    width: 300px;
+    height: 125px;
+    background-size: contain;
+  }
+
+  .card-service__img-1 {
+    background-size: cover;
+  }
+
+  .card-options__row {
+    flex-wrap: wrap;
+  }
+
+  .options__item {
+    width: 220px;
+  }
+
+  .card-option__row {
+    height: 100px;
+  }
+
+  .card-option__item {
+    writing-mode: vertical-rl;
+    width: 15%;
+  }
+
+  .available__col {
+    flex-direction: column;
+  }
+
+  .add-options__col:last-child {
+    margin-top: 0;
+  }
+
+  .card__work:nth-child(n) {
+    width: 100%;
+    border-right: none;
+    border-right: none;
+    border-bottom: 1px solid #C7C7C7;
+  }
+
+  .card__work-text {
+    margin-bottom: 20px;
+    width: 220px;
+  }
+
+  .visualization__row {
+    flex-direction: column-reverse;
+  }
+
+  .visualization-img {
+    width: 100%;
+    height: 350px;
+  }
+
+  .card__payment-text {
+    width: 250px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 479px) {
+  .header__nav {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .card__plus-tatle {
+    width: 110px;
+  }
+
+  .card__plus {
+    width: 120px;
+  }
+
+  .options__item {
+    width: 150px;
+  }
+
+  .options__table td {
+    flex-direction: column;
+  }
+
+  .add-options__col {
+    width: 100%;
+  }
+
+  .visualization-img {
+    height: 239px;
+  }
+
+  .sentens__nav {
+    margin-top: -100px;
+  }
+
+  .sentens__nav_left {
+    width: 20px;
+    background-position-x: right;
+    margin-right: 10px;
+  }
+
+  .sentens__nav_right {
+    width: 20px;
+    background-position-x: right;
+    margin-left: 10px;
+  }
+
+  .sentens__nav-item {
+    align-items: center;
+  }
+
+
+
 
 }
