--- a/css/style.css
+++ b/css/style.css
@@ -2945,6 +2945,86 @@ a.ui-button:active,
   background: #E6E6E6;
 }
 
+.card-option__content {
+  margin-top: 10px;
+  max-width: 450px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #424242;
+}
+
+.card-option__title {
+  max-width: 750px;
+}
+
+.garant__row {
+  margin-top: 70px;
+  display: flex;
+}
+
+.garant__col {
+  width: 550px;
+  margin-right: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.garanr__title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #0222A5;
+  margin-bottom: 4px;
+}
+
+.garant__text {
+  max-width: 500px;
+  padding: 16px 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #010101;
+}
+
+.garant__item {
+  width: 100%;
+}
+
+.card__bg {
+  position: relative;
+  width: 100%;
+  height: 500px;
+
+}
+
+.card__bg::after {
+  position: absolute;
+  content: '';
+  height: 500px;
+  width: 1000%;
+  top: 0;
+  left: -100%;
+  right: -100%;
+  background: #010101;
+}
+
+.card__bg::before {
+  position: absolute;
+  content: '';
+  z-index: 9999;
+  right: -15vw;
+  height: 500px;
+  width: 486px;
+  background: url('../img/montazh-vhodnoj-dveri.jpg') right center no-repeat;
+  background-size: cover;
+}
+
+
+.garant__item:not(:last-child) {
+  border-bottom: 1px solid #E6E6E6;
+}
+
 .add-options__section {
   background: #F2F2F2;
   padding: 50px 0;
