--- a/css/animation.css
+++ b/css/animation.css
@@ -103,3 +103,38 @@
 
 
 }
+
+.circle::after {
+  animation: round  1s 2s alternate 1 ;
+  animation-fill-mode: backwards;
+}
+
+@keyframes line {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
+.header__line:after {
+  animation: line .7s 2.8s alternate linear 1 both;
+}
+
+.line-row__text:nth-child(1) {
+  animation: opacity .7s 2.5s alternate linear 1 both;
+}
+
+.line-row__text:nth-child(2) {
+  animation: opacity .7s 2.6s alternate linear 1 both;
+}
+
+.line-row__text:nth-child(3) {
+  animation: opacity .7s 2.7s alternate linear 1 both;
+}
+
+.line-row__text:nth-child(4) {
+  animation: opacity .7s 2.8s alternate linear 1 both;
+}
